<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/frame_home_tab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/hometab_radio"
        />
    <RadioGroup
        android:id="@+id/hometab_radio"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="horizontal"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <RadioButton
            android:id="@+id/rb_recommend"
            style="@style/RadioButtonBottomTab"
            android:checked="true"
            android:drawableTop="@drawable/tab_0_back"
            android:text="@string/home_bookcase" />

        <RadioButton
            android:id="@+id/rb_stack"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/tab_1_back"
            android:text="@string/home_bookstore" />

        <RadioButton
            android:id="@+id/rb_download"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/tab_3_back"
            android:text="@string/home_myself" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>