<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/tv_book_info_title"
            style="@style/textTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="天龙八部"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="@dimen/item_image_width"
        android:layout_height="@dimen/item_image_height"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="红缨纪"
        android:textColor="@color/grey_font2"
        android:textSize="@dimen/book_name_size"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/iv_picture"
        app:layout_constraintTop_toTopOf="@id/iv_picture"
        />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="5dp"
        android:text="东郊邻公子 著"
        android:textSize="@dimen/book_author_size"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/iv_picture"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_author"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="游戏"
        android:textColor="@color/book_author"
        android:textSize="@dimen/book_author_size"
        app:layout_constraintStart_toEndOf="@id/iv_picture"
        app:layout_constraintTop_toBottomOf="@id/tv_author"
        />

    <TextView
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="335.4万字 "
        android:textColor="@color/grey_font2"
        android:textSize="@dimen/book_author_size"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/iv_picture"
        app:layout_constraintTop_toBottomOf="@id/tv_category"

        />

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="10"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="女帝武日月凌空，上官婉儿称量天下， 李裹儿艳比花娇，五姓子勾心斗角， 太平公主难太平，李家三郎真隆基， 狄仁杰、张易之、冯小宝……， 才子、佳人、屠狗辈！ 红袖招，游侠儿，游走大唐天空下， 醉卧枕江山，谈笑望乾坤！"
        android:textColor="@color/grey_font1"
        android:textSize="@dimen/book_author_size"
        app:layout_constraintTop_toBottomOf="@id/iv_picture"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="目录"
        android:textColor="@color/grey_font2"
        android:textSize="@dimen/book_name_size"
        app:layout_constraintTop_toBottomOf="@id/tv_intro"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/tv_up_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="上传于 07-08"
        android:textColor="@color/grey_font2"
        android:textSize="@dimen/book_author_size"
        app:layout_constraintTop_toBottomOf="@id/tv_intro"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/category_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_up_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_show_catalogue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
     />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/info_add_to_shelf_tv"
            style="@style/textContentTileStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_info_add" />

        <TextView
            android:id="@+id/tv_start_read"
            style="@style/textContentTileStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/start_read_bg"
            android:gravity="center"
            android:text="@string/book_info_start"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_book_info_download"
            style="@style/textContentTileStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_info_download" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>